Previous edit problem

--- a/src/scss/_jquery-ui.scss
+++ b/src/scss/_jquery-ui.scss
@@ -910,7 +910,7 @@ body #vs-dark-ui .ui-tooltip {
 }
 #vs-dark-ui .ui-widget-header {
 	border: 1px solid #0b3e6f;
-	background: #0b3e6f $ui-bg_diagonals-small_15_0b3e6f_40x40 50% 50% repeat;
+	background: #0b3e6f url("images/ui-bg_diagonals-small_15_0b3e6f_40x40.png") 50% 50% repeat;
 	color: #f6f6f6;
 	font-weight: bold;
 }
