--- a/src/scss/error.scss
+++ b/src/scss/error.scss
@@ -93,4 +93,4 @@ $font_7: Courier New;
 $font_8: FontAwesome;
 
 // Dynamic Import - do not edit
-@import "IMG_logo", "IMG_logohover", "IMG_tbservers", "IMG_tbservershover", "IMG_ui-icons_3d2d01_256x240", "IMG_ui-icons_f2f5f7_256x240", "main";
+@import "IMG_logo", "IMG_logoflare", "IMG_logohover", "IMG_tbservers", "IMG_tbservershover", "IMG_ui-icons_3d2d01_256x240", "IMG_ui-icons_f2f5f7_256x240", "main";
